--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -34,7 +34,7 @@
   -->
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit 'Guardar', class: 'btn btn-default' %>
+      <%= f.submit class: 'btn btn-default' %>
     </div>
   </div>
 <% end %>
