--- a/app/views/companies/_rule.html.erb
+++ b/app/views/companies/_rule.html.erb
@@ -1,4 +1,4 @@
-<div id="object-js-<%= rule.class.to_s.tableize %>-<%= rule.id %>" class="object-js-crud object-js-<%= rule.class.to_s.tableize %>">
+<div id="object-js-<%= rule.class.to_s.tableize %>-<%= rule.id %>" class="col-md-4 col-sm-6 col-xs-12 object-js-crud object-js-<%= rule.class.to_s.tableize %>">
   <i class='fa fa-building-o'></i>
   <%= link_to "#{rule.description}".html_safe, rule %>
 
