--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -13,6 +13,7 @@
           <div class="item"><i class='fa fa-building-o'></i> Sucursales <span class="badge"><%= company.branches.count %></span></div>
           <div class="item"><i class='fa fa-list'></i> Reglas <span class="badge"><%= company.rules.count %></span></div>
           <div class="item"><i class='fa fa-dot-circle-o'></i> Promociones <span class="badge"><%= company.promotions.count %></span></div>
+          <div class="item"><i class='fa fa-gift'></i> Productos <span class="badge"><%= company.products.count %></span></div>
         </div>
         <p><%= link_to 'Ver detalles »', company, role: 'button', class: 'btn btn-info' %></p>
       </div>
