--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,46 +7,46 @@
   <div class="form-group">
     <%= f.label :login, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_field :login, class: 'form-control', placeholder: 'Login' %>
+      <%= f.text_field :login, class: 'form-control', placeholder: 'nombre de usuario' %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :name, 'Nombre', class: 'col-sm-2 control-label' %>
+    <%= f.label :name, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
+      <%= f.text_field :name, class: 'form-control', placeholder: 'nombre' %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :address, 'Dirección', class: 'col-sm-2 control-label' %>
+    <%= f.label :address, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_field :address, class: 'form-control', placeholder: 'Dirección' %>
+      <%= f.text_field :address, class: 'form-control', placeholder: 'dirección' %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :phone, 'Teléfono', class: 'col-sm-2 control-label' %>
+    <%= f.label :phone, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_field :phone, class: 'form-control', placeholder: 'Número telefónico' %>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :email, 'Correo electrónico', class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
+      <%= f.text_field :phone, class: 'form-control', placeholder: 'número telefónico' %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :password, 'Contraseña', class: 'col-sm-2 control-label' %>
+    <%= f.label :email, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.password_field :password, class: 'form-control', placeholder: 'Contraseña' %>
+      <%= f.text_field :email, class: 'form-control', placeholder: 'correo electrónico' %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation, 'Confirmación de contraseña', class: 'col-sm-2 control-label' %>
+    <%= f.label :password, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirmación de Contraseña' %>
+      <%= f.password_field :password, class: 'form-control', placeholder: 'contraseña' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :password_confirmation, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'confirmación de contraseña' %>
     </div>
   </div>
