--- a/app/views/branches/_form_js.html.erb
+++ b/app/views/branches/_form_js.html.erb
@@ -12,20 +12,28 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name, 'Nombre', class: 'col-sm-2 control-label' %>
+    <%= f.label :name, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
+      <%= f.text_field :name, class: 'form-control' %>
     </div>
   </div>
 
   <%= render 'shared/company_id', f: f %>
 
   <div class="form-group">
-    <%= f.label :address, 'Dirección', class: 'col-sm-2 control-label' %>
+    <%= f.label :address, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_field :address, class: 'form-control', placeholder: 'Dirección' %>
+      <%= f.text_field :address, class: 'form-control' %>
     </div>
   </div>
+
+  <div class="form-group">
+    <%= f.label :phone, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :phone, class: 'form-control' %>
+    </div>
+  </div>
+
   <!--
   <div class="field">
     <= f.label :company_id %><br>
@@ -34,7 +42,7 @@
   -->
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit 'Guardar', class: 'btn btn-default' %>
+      <%= f.submit class: 'btn btn-default' %>
     </div>
   </div>
 <% end %>
