--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -24,7 +24,7 @@
     <%= render 'shared/new_admin' %>
 <% end %>
 
-<div id="computers-container" class="row">
+<div id="computers-container">
   <%= render :partial => 'shared/principal_structure_for_crud_js', locals: { object_class: 'Computer', owner: @branch } %></div>
 </div>
 <br>
