--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -19,7 +19,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit 'Guardar', class: 'btn btn-default' %>
+      <%= f.submit class: 'btn btn-default' %>
     </div>
 
   </div>
