--- a/app/views/companies/_product.html.erb
+++ b/app/views/companies/_product.html.erb
@@ -1,7 +1,5 @@
-<div id="object-js-<%= product.class.to_s.tableize %>-<%= product.id %>" class="object-js-crud object-js-<%= product.class.to_s.tableize %>">
-  <i class='fa fa-building-o'></i>
-  <%= link_to "#{image_tag(product.picture.url(:thumb))}".html_safe, product %>
-  <%= product.description %>
-
+<div id="object-js-<%= product.class.to_s.tableize %>-<%= product.id %>" class="col-md-4 col-sm-6 col-xs-12 object-js-crud object-js-<%= product.class.to_s.tableize %> ">
+  <a href="<%= product_path(product) %>"><%= image_tag product.picture.url(:thumb), class: 'img-circle' %></a>
+  <p><%=product.description %></p>
   <%= render partial: 'shared/options_record_js', locals: { class_name_tableize: product.class.to_s.tableize, object_id: product.id, owner_class: owner_class } %>
 </div>
