--- a/app/views/computers/_form_js.html.erb
+++ b/app/views/computers/_form_js.html.erb
@@ -12,9 +12,9 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name, 'Nombre', class: 'col-sm-2 control-label' %>
+    <%= f.label :name, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
+      <%= f.text_field :name, class: 'form-control' %>
     </div>
   </div>
 
@@ -22,7 +22,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit 'Guardar', class: 'btn btn-default' %>
+      <%= f.submit class: 'btn btn-default' %>
     </div>
   </div>
 
