--- a/app/views/products/_form_js.html.erb
+++ b/app/views/products/_form_js.html.erb
@@ -12,15 +12,16 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :description, 'Descripción', class: 'col-sm-2 control-label' %>
+    <%= f.label :description, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_field :description, class: 'form-control', placeholder: 'Descripción' %>
+      <%= f.text_field :description, class: 'form-control' %>
     </div>
   </div>
 
   <div class="form-group">
-    <div class="col-sm-10 col-sm-offset-2">
-      <%= f.file_field :picture, class: 'form-contl', placeholder: 'Imágen' %>
+    <%= f.label :picture, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.file_field :picture %>
     </div>
   </div>
 
@@ -28,7 +29,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit 'Guardar', class: 'btn btn-default' %>
+      <%= f.submit class: 'btn btn-default' %>
     </div>
   </div>
 <% end %>
