--- a/app/views/promotions/_form_js.html.erb
+++ b/app/views/promotions/_form_js.html.erb
@@ -13,9 +13,9 @@
 
 
   <div class="form-group">
-    <%= f.label :description, 'Descripción', class: 'col-sm-2 control-label' %>
+    <%= f.label :description, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_area :description, class: 'form-control', placeholder: 'Dirección' %>
+      <%= f.text_area :description, class: 'form-control' %>
     </div>
   </div>
 
@@ -23,7 +23,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit 'Guardar', class: 'btn btn-default' %>
+      <%= f.submit class: 'btn btn-default' %>
     </div>
   </div>
 <% end %>
