--- a/app/views/shared/_company_id.html.erb
+++ b/app/views/shared/_company_id.html.erb
@@ -2,7 +2,7 @@
     <%= f.hidden_field :company_id, value: params[:company_id] %>
 <% elsif current_user.is_admin? %>
     <div class="form-group">
-      <%= f.label :company_id, 'Empresa', class: 'col-sm-2 control-label' %>
+      <%= f.label :company_id, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
         <%= f.collection_select :company_id, Company.order(:name), :id, :name, prompt: 'Seleccione empresa' %>
       </div>
