--- a/app/views/shared/_options_record_js.html.erb
+++ b/app/views/shared/_options_record_js.html.erb
@@ -1,4 +1,4 @@
 <div class="options-object-js label label-info">
-    <div class="option"><i class="fa fa-pencil" title="editar" data-toggle="modal" data-target="#form-record-js" onclick="edit_record('<%= class_name_tableize %>', <%= object_id %>, '<%= owner_class %>')"></i></div>
-    <div class="option"><i class="fa fa-times" title="eliminar" onclick="destroy_record('<%= class_name_tableize %>', <%= object_id %>)"></i></div>
+    <div class="option"><i class="fa fa-pencil fa-lg" title="editar" data-toggle="modal" data-target="#form-record-js" onclick="edit_record('<%= class_name_tableize %>', <%= object_id %>, '<%= owner_class %>')"></i></div>
+    <div class="option"><i class="fa fa-times fa-lg" title="eliminar" onclick="destroy_record('<%= class_name_tableize %>', <%= object_id %>)"></i></div>
 </div>
