--- a/app/assets/stylesheets/branches.css.scss
+++ b/app/assets/stylesheets/branches.css.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import 'variables';
+
 #index-head{
   overflow: hidden;
   #title{
@@ -14,6 +16,39 @@
 }
 
 #info-branch{
-  padding: 30px 30px;
+  padding: 15px 30px;
   text-align: center;
+
+  h2{
+    margin: 0;
+  }
+}
+
+.union-habtm{
+
+  .assigned-list{
+
+  }
+
+  .unassigned-list{
+    background-color: #DDD;
+    @include border-radius(5px)
+  }
+
+  .item{
+    position: relative;
+
+    .add-item{
+      //margin-left: 5px;
+      position: absolute;
+      right: 5px;
+      top: 0px;
+    }
+  }
+
+  .rule-item{
+    margin: 5px 0;
+  }
+
+
 }
