--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -1,5 +1,6 @@
 <%= content_for :asset_javascript do %>
     <%= javascript_include_tag 'js_crud' %>
+    <%= javascript_include_tag 'union_habtm' %>
 <% end %>
 
 <%= render :partial => 'shared/modal_form' %>
@@ -16,7 +17,7 @@
 
 <div id="admin-container">
   <% if @branch.admin %>
-      <%= render 'shared/admin', admin: @branch.admin %>
+    <%= render 'shared/admin', admin: @branch.admin %>
   <% end %>
 </div>
 
@@ -25,8 +26,10 @@
 <% end %>
 
 <div id="computers-container">
-  <%= render :partial => 'shared/principal_structure_for_crud_js', locals: { object_class: 'Computer', owner: @branch } %></div>
+  <%= render :partial => 'shared/principal_structure_for_crud_js', locals: { object_class: 'Computer', owner: @branch } %>
 </div>
-<br>
-<%= link_to 'Edit', edit_branch_path(@branch) %> |
-<%= link_to 'Back', branches_path %>
+
+<%= render partial: 'shared/structure_union_habtm', locals: { first_element: @branch, second_class: 'rule' } %>
+
+<%= render partial: 'shared/structure_union_habtm', locals: { first_element: @branch, second_class: 'promotion' } %>
+
