Permite agregar productos a sucursal.

--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -33,3 +33,5 @@
 
 <%= render partial: 'shared/structure_union_habtm', locals: { first_element: @branch, second_class: 'promotion' } %>
 
+<%= render partial: 'shared/structure_union_habtm', locals: { first_element: @branch, second_class: 'product' } %>
+
