--- a/app/views/rules/show.html.erb
+++ b/app/views/rules/show.html.erb
@@ -6,5 +6,5 @@
   <%= @rule.description %>
 </p>
 
-<%= link_to 'Edit', edit_rule_path(@rule) %> |
-<%= link_to 'Back', rules_path %>
+<%= link_to 'Editar', edit_rule_path(@rule) %> |
+<%= link_to 'Regresar', rules_path %>
