--- a/app/assets/stylesheets/rules.css.scss
+++ b/app/assets/stylesheets/rules.css.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Rules controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// index view
+#index-head{
+  overflow: hidden;
+  #title{
+    float: left;
+  }
+
+  #new_company{
+    float: right;
+  }
+}
