--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,7 @@
  *
  *= require_self
  *= require normalize
- *= require ../font/css/font-awesome.min
+ *= require ../font/font-awesome.min.css
  * require_tree .
  */
 
