--- a/app/views/branches/unions_habtm/_products_assigned.html.erb
+++ b/app/views/branches/unions_habtm/_products_assigned.html.erb
@@ -2,6 +2,6 @@
     <div id="product-<%= product.id %>" class="col-lg-3 col-md-4 col-sm-6 col-xs-12 item product-item">
       <a href="<%= product_path(product) %>"><%= image_tag product.picture.url(:thumb), class: 'img-circle' %></a>
       <p><%=product.description %></p>
-      <i class="fa fa-minus-square btn btn-danger btn-xs add-item" title="Eliminar" style="display: none" onclick="union_habtm(this, 'branch', <%= branch.id %>, 'product', <%= product.id %>, 'delete')"></i>
+      <i class="fa fa-minus-square btn btn-danger btn-xs add-item" title="Eliminar" onclick="union_habtm(this, 'branch', <%= branch.id %>, 'product', <%= product.id %>, 'delete')"></i>
     </div>
 <% end %>
